# ERC721

./: readme.md
development_tool/environment/docker/: docker-compose.yaml
development_tool/environment/docker/service/ganache/: dockerfile
development_tool/environment/docker/service/truffle/: dockerfile
development_tool/visual_studio_code_remote_container/docker/: .devcontainer.json
source/backend/: readme.md
source/backend/lib/: Cargo.toml  mod.rs
source/client/cli/communicator/: Cargo.toml  mod.rs
source/client/frontend/communicator/: package-lock.json  package.json  readme.md
source/client/frontend/communicator/src/: App.js
source/client/frontend/communicator/src/contract_abi/: CollectionAggregator.json
source/contract/contracts/: Collection.sol  CollectionAggregator.sol  CollectionRegistryContext.sol  EnumerableAddressMap.sol  ExistableUint.sol
source/contract/migrations/: 1_deploy_contracts.js
